--- a/funtome_features.html
+++ b/funtome_features.html
@@ -27,83 +27,81 @@
 
     <!--- Header -->
     <header class="header">
-        <div class="container header-container">
-            <div class="header-logo">
-                <a href="/">
-                    <img class="logo" src="img/logo_funtome.svg" alt=""/>
-                </a>
-                <a href="/">
-                    <img src="img/lang.svg" alt=""/>
-                </a>
-            </div>
+        <div class="container">
+            <div class="header-inner">
+                <div class="header-logo">
+                    <a href="/">
+                        <img class="logo" src="img/logo_funtome.svg" alt=""/>
+                    </a>
+                    <a href="/">
+                        <img src="img/lang.svg" alt=""/>
+                    </a>
+                </div>
 
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="link-home active">
-                        <a href="index.html">главная</a>
-                    </li>
-                    <li class="link-features">
-                        <a href="funtome_features.html">особенности</a>
-                    </li>
-                    <li class="link-blog">
-                        <a href="funtome_blog.html">блог</a>
-                    </li>
-                    <li class="link-help">
-                        <a href="funtome_support.html">поддержка</a>
-                    </li>
-                    <li class="link-paki">
-                        <a href="funtome_paki.html">паки</a>
-                    </li>
-                </ul>
-            </div>
+                <div class="nav">
+                    <ul class="nav-list">
+                        <li class="link-home">
+                            <a href="index.html">главная</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_features.html">особенности</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_blog.html">блог</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_support.html">поддержка</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_paki.html">паки</a>
+                        </li>
+                    </ul>
+                </div>
 
-            <div class="header-instal">
-                <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt=""/></a>
-                <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt=""/></a>
-            </div>
+                <div class="header-instal">
+                    <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt=""/></a>
+                    <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt=""/></a>
+                </div>
+            </div>    
         </div>
     </header>
 
     <!--- Intro -->
-    <div class="container">
+    <div class="intro">
 
-        <div class="intro-features">
+        <div class="container">
+                <div class="features-container">
 
-            <div class="features-container">
-
-                <div class="features-banner-title">
-                    <div class="content-title-features">
-                        <!-- <p class="text-title">features</p> -->
-                        <img src="img/funtome-features/features-title.png" alt="">
+                    <div class="features-banner-title">
+                        <div class="content-title-features">
+                            <!-- <p class="text-title">features</p> -->
+                            <img src="img/funtome-features/features-title.png" alt="">
+                        </div>
+                        <div class="contetnt-subtitle">
+                            <p class="text-red">Funtome Messenger</p>
+                        </div>
+                        <div class="content-text">Узнайте о самых полезных и необычных<br> функциях приложения!</div>
                     </div>
-                    <div class="contetnt-subtitle">
-                        <p class="text-red">Funtome Messenger</p>
-                    </div>
-                    <div class="content-text">Узнайте о самых полезных и необычных<br> функциях приложения!</div>
-
+                    
                 </div>
-            </div>
         </div>
 
-    </div> <!-- end Intro -->
-
-    <div class="icon-social">
-        <a href="#" class="icon-fixet">
-            <img src="img/icon/inst.png" alt="">
-        </a>
-        <a href="#" class="icon-fixet">
-            <img src="img/icon/facebook.png" alt="">
-        </a>
-        <a href="#" class="icon-fixet">
-            <img src="img/icon/vk.png" alt="">
-        </a>
-        <a href="#">
-            <img src="img/icon/youtube.png" alt="">
-        </a>
+       <!--  <div class="icon-social">
+            <a href="#" class="icon-fixet">
+                <img src="img/icon/inst.png" alt="">
+            </a>
+            <a href="#" class="icon-fixet">
+                <img src="img/icon/facebook.png" alt="">
+            </a>
+            <a href="#" class="icon-fixet">
+                <img src="img/icon/vk.png" alt="">
+            </a>
+            <a href="#">
+                <img src="img/icon/youtube.png" alt="">
+            </a>
+        </div> -->
     </div>
-    <div class="intro-banner">
-        <img src="img/funtome-features/banner-features-desc.jpg" alt="">
-    </div>
+    
 
     <!-- Content block -->
     <div class="content-block">
