--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
             <div class="nav">
                 <ul class="nav-list">
-                    <li class="link-home active">
+                    <li class="link-home">
                         <a href="index.html">главная</a>
                     </li>
-                    <li class="link-features">
+                    <li class="link-home">
                         <a href="funtome_features.html">особенности</a>
                     </li>
-                    <li class="link-blog">
+                    <li class="link-home">
                         <a href="funtome_blog.html">блог</a>
                     </li>
-                    <li class="link-help">
-                        <a href="#">поддержка</a>
+                    <li class="link-home">
+                        <a href="funtome_support.html">поддержка</a>
                     </li>
-                    <li class="link-paki">
+                    <li class="link-home">
                         <a href="funtome_paki.html">паки</a>
                     </li>
                 </ul>
