--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -37,22 +37,21 @@
                 </a>
             </div>
 
-            <div class="nav ">
-                <ul class="nav-list black-style">
-                    <li class="link-home active">
+            <div class="nav">
+                <ul class="nav-list">
+                    <li class="link-home">
                         <a href="index.html">главная</a>
                     </li>
-                    <li class="link-features">
+                    <li class="link-home">
                         <a href="funtome_features.html">особенности</a>
                     </li>
-                    <li class="link-blog">
+                    <li class="link-home">
                         <a href="funtome_blog.html">блог</a>
                     </li>
-                    <li class="link-help">
+                    <li class="link-home">
                         <a href="funtome_support.html">поддержка</a>
-
                     </li>
-                    <li class="link-paki">
+                    <li class="link-home">
                         <a href="funtome_paki.html">паки</a>
                     </li>
                 </ul>
