--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -2,80 +2,79 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Funtome</title>
-    <meta name="description" content="Mobile product company"/>
+    <meta name="description" content="Mobile product company" />
 
     <link
-            href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
-            rel="stylesheet">
+        href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="/js/owlCarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style-funtome-blog.css">
 
 </head>
 
 <body>
 
-<div id="app" class="app">
+    <div id="app" class="app">
 
-    <!--- Header -->
-    <header class="header">
-        <div class="container header-container">
-            <div class="header-logo">
-                <a href="/">
-                    <img class="logo" src="img/logo_funtome.svg" alt=""/>
-                </a>
-                <a href="/">
-                    <img src="img/lang.svg" alt=""/>
-                </a>
+        <!--- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="header-inner">
+                    <div class="header-logo">
+                        <a href="/">
+                            <img class="logo" src="img/logo_funtome.svg" alt="" />
+                        </a>
+                        <a href="/">
+                            <img src="img/lang.svg" alt="" />
+                        </a>
+                    </div>
+
+                    <div class="nav">
+                        <ul class="nav-list">
+                            <li class="link-home">
+                                <a href="index.html">главная</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_features.html">особенности</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_blog.html">блог</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_support.html">поддержка</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_paki.html">паки</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="header-instal">
+                        <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
+                        <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
+                    </div>
+                </div>
             </div>
+        </header>
 
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="link-home">
-                        <a href="index.html">главная</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_features.html">особенности</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_blog.html">блог</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_support.html">поддержка</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_paki.html">паки</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="header-instal">
-                <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt=""/></a>
-                <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt=""/></a>
-            </div>
-        </div>
-    </header>
-
-    <div class="content">
         <!--- Intro -->
-        <div class="container">
+        <div class="intro blog">
 
-            <div class="intro-features">
-
+            <div class="container">
                 <div class="features-container">
 
                     <div class="features-banner-title">
                         <div class="content-title-features">
-                            <!-- <p class="text-title">features</p> -->
-                            <img src="img/funtome-blog/blog-title.svg" alt="">
+                            <h1 class="h1-ru">Блог</h1>
                         </div>
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
@@ -88,24 +87,20 @@
                 </div>
             </div>
 
-        </div> <!-- end Intro -->
-
-        <div class="icon-social">
-            <a href="#" class="icon-fixet">
-                <img src="img/icon/inst.png" alt="">
-            </a>
-            <a href="#" class="icon-fixet">
-                <img src="img/icon/facebook.png" alt="">
-            </a>
-            <a href="#" class="icon-fixet">
-                <img src="img/icon/vk.png" alt="">
-            </a>
-            <a href="#">
-                <img src="img/icon/youtube.png" alt="">
-            </a>
-        </div>
-        <div class="intro-banner">
-            <img src="img/funtome-blog/blog-photo-desc.jpg" alt="">
+            <div class="icon-social">
+                <a href="#" class="icon-fixet">
+                    <img src="img/icon/inst.png" alt="">
+                </a>
+                <a href="#" class="icon-fixet">
+                    <img src="img/icon/facebook.png" alt="">
+                </a>
+                <a href="#" class="icon-fixet">
+                    <img src="img/icon/vk.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/icon/youtube.png" alt="">
+                </a>
+            </div>
         </div>
 
         <!-- Content block -->
@@ -136,10 +131,12 @@
                     <p class="news-title-first">Новости</p>
                     <div class="news-iteam">
 
-                        <div class="news-section"> <!-- New section -->
+                        <div class="news-section">
+                            <!-- New section -->
                             <img class="img-news" src="img/funtome-blog/news/news-1-min.png" alt="">
 
-                            <a class="news-title" href="funtome_blog_str_1.html">Хайп в молодежном сленге - простыми словами</a>
+                            <a class="news-title" href="funtome_blog_str_1.html">Хайп в молодежном сленге - простыми
+                                словами</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Начнем с того, что сетевой сленг очень популярен</p>
                                 <p class="style-text-blog">«Хайп» уже больше двух лет занимает лидирующие позиции в
@@ -163,7 +160,8 @@
                             </div>
                         </div>
 
-                        <div class="news-section"> <!-- New section-->
+                        <div class="news-section">
+                            <!-- New section-->
                             <img class="img-news" src="img/funtome-blog/news/news-2-min.png" alt="">
 
                             <a class="news-title" href="funtome_blog_str_1.html">Что такое флекс</a>
@@ -192,13 +190,19 @@
                             </div>
                         </div>
 
-                        <div class="news-section"> <!-- New section -->
+                        <div class="news-section">
+                            <!-- New section -->
                             <img class="img-news" src="img/funtome-blog/news/news-3-min.png" alt="">
 
                             <a class="news-title" href="funtome_blog_str_1.html">РОФЛ? Что это?</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Откуда берутся эти странные слова</p>
-                                <p class="style-text-blog">«РОФЛ!!!» Или: «Да ты РОФЛИШЬ!» – фразы, которые сегодня видел и слышал практически каждый. Сегодня все чаще в интернет-пространстве и не только встречаются странные слова, о значении которых мы можем только догадываться. Мир постоянно меняется и язык, как средство его восприятия и выражения, тоже не стоит на месте. Множество новых слов приходит из английского: таски, дедлайны, чекать. Особенно активно англоязычные...</p>
+                                <p class="style-text-blog">«РОФЛ!!!» Или: «Да ты РОФЛИШЬ!» – фразы, которые сегодня
+                                    видел и слышал практически каждый. Сегодня все чаще в интернет-пространстве и не
+                                    только встречаются странные слова, о значении которых мы можем только догадываться.
+                                    Мир постоянно меняется и язык, как средство его восприятия и выражения, тоже не
+                                    стоит на месте. Множество новых слов приходит из английского: таски, дедлайны,
+                                    чекать. Особенно активно англоязычные...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -215,14 +219,19 @@
                             </div>
                         </div>
 
-                        <div class="news-section"> <!-- New section-->
+                        <div class="news-section">
+                            <!-- New section-->
                             <img class="img-news" src="img/funtome-blog/news/news-4-min.png" alt="">
 
                             <a class="news-title" href="funtome_blog_str_1.html">ЭМОДЗИ или ЭМОДЖИ?</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Немного предыстории</p>
-                                <p class="style-text-blog">Все началось с картинки. Ведь действительно, в самом начале, еще до того, как придумать письмо, люди рисовали свои послания. Визуализировать – это естественно для человека. Картинка – это возможность кратко, но емко передать сообщение, изобразить его.
-                                В цифровом мире все началось с эмоций. Хотелось придать эмоциональную окраску тому, что мы говорим, показать, что чувствуем в тот или иной момент, «улыбнуться»...</p>
+                                <p class="style-text-blog">Все началось с картинки. Ведь действительно, в самом начале,
+                                    еще до того, как придумать письмо, люди рисовали свои послания. Визуализировать –
+                                    это естественно для человека. Картинка – это возможность кратко, но емко передать
+                                    сообщение, изобразить его.
+                                    В цифровом мире все началось с эмоций. Хотелось придать эмоциональную окраску тому,
+                                    что мы говорим, показать, что чувствуем в тот или иной момент, «улыбнуться»...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -239,14 +248,19 @@
                             </div>
                         </div>
 
-                        <div class="news-section"> <!-- New section -->
+                        <div class="news-section">
+                            <!-- New section -->
                             <img class="img-news" src="img/funtome-blog/news/news-5-min.png" alt="">
 
                             <a class="news-title" href="funtome_blog_str_1.html">ЧСВ</a>
-                            <div class="news-subtitle">                                
-                                <p class="style-text-blog">Здравствуйте, уважаемые читатели! Сегодня мы с вами разберем, что такое ЧСВ и как быть, если сетевое пространство с детской непосредственностью советует то понижать его, то повышать.</p>
-                                <p class="style-text-blog bold">Понятие и философия ЧСВ</p>    
-                                <p class="style-text-blog">ЧСВ расшифровывается как «чувство собственной важности» либо «чувство собственного величия» – последний вариант носит более негативный эмоциональный окрас, но обе расшифровки равноценны...</p>
+                            <div class="news-subtitle">
+                                <p class="style-text-blog">Здравствуйте, уважаемые читатели! Сегодня мы с вами разберем,
+                                    что такое ЧСВ и как быть, если сетевое пространство с детской непосредственностью
+                                    советует то понижать его, то повышать.</p>
+                                <p class="style-text-blog bold">Понятие и философия ЧСВ</p>
+                                <p class="style-text-blog">ЧСВ расшифровывается как «чувство собственной важности» либо
+                                    «чувство собственного величия» – последний вариант носит более негативный
+                                    эмоциональный окрас, но обе расшифровки равноценны...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -263,13 +277,19 @@
                             </div>
                         </div>
 
-                        <div class="news-section"> <!-- New section-->
+                        <div class="news-section">
+                            <!-- New section-->
                             <img class="img-news" src="img/funtome-blog/news/news-6-min.png" alt="">
 
-                            <a class="news-title" href="funtome_blog_str_1.html">Кэшбэк - отличный способ получать прибыль от покупок</a>
+                            <a class="news-title" href="funtome_blog_str_1.html">Кэшбэк - отличный способ получать
+                                прибыль от покупок</a>
                             <div class="news-subtitle">
-                                <p class="style-text-blog">Вот уже несколько лет подряд на просторах интернета и в банковской сфере мы часто видим слово «кэшбэк». Что это такое, кому и зачем он выгоден, мы разберемся в этой статье.</p>
-                                <p class="style-text-blog">Термин cashback пришел из английского языка и буквально обозначает «возврат наличных денег» на счет платежной карты либо на счет аккаунта, если речь идет о кэшбэк-сервисе. При оплате товаров или услуг при...</p>
+                                <p class="style-text-blog">Вот уже несколько лет подряд на просторах интернета и в
+                                    банковской сфере мы часто видим слово «кэшбэк». Что это такое, кому и зачем он
+                                    выгоден, мы разберемся в этой статье.</p>
+                                <p class="style-text-blog">Термин cashback пришел из английского языка и буквально
+                                    обозначает «возврат наличных денег» на счет платежной карты либо на счет аккаунта,
+                                    если речь идет о кэшбэк-сервисе. При оплате товаров или услуг при...</p>
                             </div>
                             <div class="news-like-data">
                                 <div class="like">
@@ -291,7 +311,7 @@
             </div> <!-- News end -->
 
             <div class="container-center">
-                
+
                 <div class="section-pages">
                     <ul class="pages">
                         <li class="pages-style">
@@ -357,10 +377,10 @@
                                 <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
 
-                        </div>    
-                    </div>    
+                        </div>
+                    </div>
                 </div>
-            </div>    
+            </div>
 
             <div class="container-center">
                 <div class="conditiuns">
@@ -371,7 +391,7 @@
 
         </div> <!-- content-block end -->
 
-    </div> <!-- content end -->
+    </div> <!-- end App -->
 
     <footer>
         <div class="footer">
@@ -420,24 +440,24 @@
         </div> <!-- end footer -->
 
     </footer>
-</div> <!-- End App -->
 
-<script src="/js/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/js/owlCarousel/owl.carousel.min.js"></script>
 
-<script>
-    $(document).ready(function () {
-        $("#slider-2").owlCarousel({
-            'items': 3,
-            'slideBy': 3,
-            'loop': true,
-            'margin': 29,
-            'autoplayHoverPause': true,
-            'nav': true,
+    <script src="/js/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/js/owlCarousel/owl.carousel.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $("#slider-2").owlCarousel({
+                'items': 3,
+                'slideBy': 3,
+                'loop': true,
+                'margin': 29,
+                'autoplayHoverPause': true,
+                'nav': true,
+            });
         });
-    });
-</script>
+    </script>
 
 </body>
 
