--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -27,45 +27,47 @@
 
     <!--- Header -->
     <header class="header border-header">
-        <div class="container header-container">
-            <div class="header-logo">
-                <a href="/">
-                    <img class="logo" src="img/logo_funtome_black.svg" alt=""/>
-                </a>
-                <a href="/">
-                    <img src="img/lang_black.svg" alt=""/>
-                </a>
-            </div>
+        <div class="container">
+            <div class="header-inner">
+                <div class="header-logo">
+                    <a href="/">
+                        <img class="logo" src="img/logo_funtome_black.svg" alt=""/>
+                    </a>
+                    <a href="/">
+                        <img src="img/lang_black.svg" alt=""/>
+                    </a>
+                </div>
 
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="link-home">
-                        <a href="index.html">главная</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_features.html">особенности</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_blog.html">блог</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_support.html">поддержка</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_paki.html">паки</a>
-                    </li>
-                </ul>
-            </div>
+                <div class="nav">
+                    <ul class="nav-list">
+                        <li class="link-home">
+                            <a href="index.html">главная</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_features.html">особенности</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_blog.html">блог</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_support.html">поддержка</a>
+                        </li>
+                        <li class="link-home">
+                            <a href="funtome_paki.html">паки</a>
+                        </li>
+                    </ul>
+                </div>
 
-            <div class="header-instal">
-                <a href="#"><img class="instal-apple" src="img/icon/apple_icon_black.png" alt=""/></a>
-                <a href="#"><img class="instal-google" src="img/icon/google_icon_black.png" alt=""/></a>
+                <div class="header-instal">
+                    <a href="#"><img class="instal-apple" src="img/icon/apple_icon_black.png" alt=""/></a>
+                    <a href="#"><img class="instal-google" src="img/icon/google_icon_black.png" alt=""/></a>
+                </div>
             </div>
-
         </div>
     </header>
 
-    <div class="content">
+    <!--- Intro -->
+    <div class="intro block-str-first">
 
         <div class="icon-social">
             <a href="#" class="icon-fixet">
@@ -81,6 +83,10 @@
                 <img src="img/icon/youtube.png" alt="">
             </a>
         </div>
+    </div>    
+
+    <!-- Content block -->
+    <div class="content-block">
 
         <div class="container">
             <div class="news-blog-first">
@@ -475,7 +481,7 @@
                 <a href="#" class="style-conditions">Политика конфиденциальности</a>
             </div>
         </div> <!-- container end -->
-    </div> <!-- content end -->
+    </div> <!-- content block -->
 
     <footer>
         <div class="footer">
