--- a/index.html
+++ b/index.html
@@ -2,84 +2,82 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Funtome</title>
-    <meta name="description" content="Mobile product company"/>
+    <meta name="description" content="Mobile product company" />
 
     <link
-            href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
-            rel="stylesheet">
+        href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="/js/owlCarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css" />
     <!-- <link rel="stylesheet" href="css/media/media.css"> -->
 
 </head>
 
 <body>
 
-<div id="app" class="app">
+    <div id="app" class="app">
 
-    <!--- Header -->
-    <header class="header">
-        <div class="container header-container">
-            <div class="header-logo">
-                <a href="/">
-                    <img class="logo" src="img/logo_funtome.svg" alt=""/>
-                </a>
-                <a href="/">
-                    <img src="img/lang.svg" alt=""/>
-                </a>
+        <!--- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="header-inner">
+                    <div class="header-logo">
+                        <a href="/">
+                            <img class="logo" src="img/logo_funtome.svg" alt="" />
+                        </a>
+                        <a href="/">
+                            <img src="img/lang.svg" alt="" />
+                        </a>
+                    </div>
+
+                    <div class="nav">
+                        <ul class="nav-list">
+                            <li class="link-home">
+                                <a href="index.html">главная</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_features.html">особенности</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_blog.html">блог</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_support.html">поддержка</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_paki.html">паки</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="header-instal">
+                        <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
+                        <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
+                    </div>
+                </div>
             </div>
-
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="link-home">
-                        <a href="index.html">главная</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_features.html">особенности</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_blog.html">блог</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_support.html">поддержка</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_paki.html">паки</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="header-instal">
-                <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt=""/></a>
-                <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt=""/></a>
-            </div>
-
-        </div>
-    </header>
-
-    <div class="content">
+        </header>
 
         <!--- Intro -->
-        <div class="intro">
-            <div class="container-center">
+        <div class="intro home">
 
+            <div class="container">
                 <div class="intro-container">
 
                     <div class="intro-content">
                         <div class="content-title">
-                            <img src="img/funtome_title.png" alt="">
+                            <h1 class="h1-ru">Funtome messenger</h1>
                         </div>
                         <div class="contetnt-subtitle">
-                            <p class="text-subtitle">сделай общение</p>
-                            <p class="text-red">ярче!</p>
+                            <p class="text-subtitle">сделай общение, <span class="text-red">ярче!</span></p>
                         </div>
                         <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст
                             или целые
@@ -93,10 +91,9 @@
                                 <img src="img/butt/butt_google.png" alt="">
                             </a>
                         </div>
-
                     </div>
                     <div class="intro-photo">
-                        <img class="intro-photo-size" src="img/intro_photo_group.png" alt="">
+                        <img class="intro-photo-size" src="/img/intro_photo_group.png" alt="">
                     </div>
                 </div>
 
@@ -117,12 +114,7 @@
                 </a>
             </div>
 
-            <div class="intro-banner">
-                <img src="img/header-photo_desc.jpg" 
-                alt="">                
-            </div>
-
-        </div> <!-- end Intro -->
+        </div>
 
         <!-- Content block -->
         <div class="content-block">
@@ -175,8 +167,8 @@
                     <h3 class="text-instal">Онлайн мессенджер для Android и iOS устройств</h3>
                     <span class="arrow-next"></span>
                     <div class="header-instal">
-                        <a href="#"><img class="sms-apple" src="img/icon/sms-apple.png" alt=""/></a>
-                        <a href="#"><img class="sms-google" src="img/icon/sms-google.png" alt=""/></a>
+                        <a href="#"><img class="sms-apple" src="img/icon/sms-apple.png" alt="" /></a>
+                        <a href="#"><img class="sms-google" src="img/icon/sms-google.png" alt="" /></a>
                     </div>
                 </div>
             </div>
@@ -185,12 +177,14 @@
                 <div class="info-funtome">
                     <div class="title-info">О приложении</div>
                     <div class="text-info">
-                        <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий привычное
+                        <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий
+                            привычное
                             представление
                             об общении. Теперь делиться яркими и живыми эмоциями стало еще проще. Новый графический
                             мессенджер Funtome
                             поддерживает функцию переписки картинками.</p>
-                        <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и эмоджи
+                        <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и
+                            эмоджи
                             и
                             визуализировать все!</p>
                         <p class="style-text">Скачивайте и общайтесь. Отправляйте новые картинки, получайте награды,
@@ -269,25 +263,25 @@
 
     </footer>
 
-</div> <!-- End App -->
+    </div> <!-- End App -->
 
 
-<script src="/js/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/js/owlCarousel/owl.carousel.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/js/owlCarousel/owl.carousel.min.js"></script>
 
-<script>
-    $(document).ready(function () {
-        $("#slider_1").owlCarousel({
-            'items': 1,
-            'loop': true,
-            // 'autoplay': true,
-            // 'autoplayTimeout': 3000,
-            'autoplayHoverPause': true,
-            'nav': true,
+    <script>
+        $(document).ready(function () {
+            $("#slider_1").owlCarousel({
+                'items': 1,
+                'loop': true,
+                // 'autoplay': true,
+                // 'autoplayTimeout': 3000,
+                'autoplayHoverPause': true,
+                'nav': true,
+            });
         });
-    });
-</script>
+    </script>
 
 </body>
 
