--- a/funtome_support.html
+++ b/funtome_support.html
@@ -2,21 +2,21 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Funtome</title>
-    <meta name="description" content="Mobile product company"/>
+    <meta name="description" content="Mobile product company" />
 
     <link
-            href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
-            rel="stylesheet">
+        href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="/js/owlCarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style-funtome-support.css">
     <!-- <link rel="stylesheet" href="css/media/media.css"> -->
 
@@ -24,59 +24,58 @@
 
 <body>
 
-<div id="app" class="app">
+    <div id="app" class="app">
 
-    <!--- Header -->
-    <header class="header">
-        <div class="container header-container">
-            <div class="header-logo">
-                <a href="/">
-                    <img class="logo" src="img/logo_funtome.svg" alt=""/>
-                </a>
-                <a href="/">
-                    <img src="img/lang.svg" alt=""/>
-                </a>
+        <!--- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="header-inner">
+                    <div class="header-logo">
+                        <a href="/">
+                            <img class="logo" src="img/logo_funtome.svg" alt="" />
+                        </a>
+                        <a href="/">
+                            <img src="img/lang.svg" alt="" />
+                        </a>
+                    </div>
+
+                    <div class="nav">
+                        <ul class="nav-list">
+                            <li class="link-home">
+                                <a href="index.html">главная</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_features.html">особенности</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_blog.html">блог</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_support.html">поддержка</a>
+                            </li>
+                            <li class="link-home">
+                                <a href="funtome_paki.html">паки</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="header-instal">
+                        <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
+                        <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
+                    </div>
+                </div>
             </div>
-
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="link-home">
-                        <a href="index.html">главная</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_features.html">особенности</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_blog.html">блог</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_support.html">поддержка</a>
-                    </li>
-                    <li class="link-home">
-                        <a href="funtome_paki.html">паки</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="header-instal">
-                <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt=""/></a>
-                <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt=""/></a>
-            </div>
-
-        </div>
-    </header>
-
-    <div class="content">
+        </header>
 
         <!--- Intro -->
-        <div class="intro">
-            <div class="container-center">
+        <div class="intro support">
 
-                <div class="intro-container">
+            <div class="container">
+                <div class="features-container">
 
-                    <div class="intro-content">
-                        <div class="content-title">
-                            <img src="img/funtome-support/funtome-support-title.png" alt="">
+                    <div class="features-banner-title">
+                        <div class="content-title-features">
+                            <h1 class="h1-ru">Поддержка</h1>
                         </div>
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
@@ -84,7 +83,6 @@
                         <div class="content-text">Мы всегдя рядом!</div>
                     </div>
                 </div>
-
             </div>
 
             <div class="icon-social">
@@ -102,17 +100,12 @@
                 </a>
             </div>
 
-            <div class="intro-banner">
-                <img src="img/funtome-support/photo-support-desk.jpg" 
-                alt="">                
-            </div>
-
         </div> <!-- end Intro -->
 
         <!-- Content block -->
         <div class="content-block">
 
-            <div class="container-center">  
+            <div class="container-center">
 
                 <div class="support-block">
                     <div class="support-title">
@@ -121,39 +114,51 @@
                     </div>
 
                     <div class="select">
-                        <div class="current select-input" onclick="selectChose(this);" data-key="" data-value="">Не получается пригласить друга</div>
+                        <div class="current select-input" onclick="selectChose(this);" data-key="" data-value="">Не
+                            получается пригласить друга</div>
                         <div class="list">
-                            <div class="select-input list-item" onclick="selectItem(this)" data-key="1" data-value="Ошибка 1">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="1"
+                                data-value="Ошибка 1">
                                 Не приходит SMS с кодом активации
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)" data-key="2" data-value="Ошибка 2">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="2"
+                                data-value="Ошибка 2">
                                 Не приходят уведомления
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)" data-key="3" data-value="Ошибка 3">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="3"
+                                data-value="Ошибка 3">
                                 Не устанавливается фото
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)" data-key="4" data-value="Ошибка 4">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="4"
+                                data-value="Ошибка 4">
                                 Не отправляется голосовое сообщение
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="5" data-value="Ошибка 5">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="5"
+                                data-value="Ошибка 5">
                                 Не отправляются медиа файлы
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="6" data-value="Ошибка 6">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="6"
+                                data-value="Ошибка 6">
                                 Не получается пригласить друга
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="7" data-value="Ошибка 7">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="7"
+                                data-value="Ошибка 7">
                                 Не получаю фанумы за активность
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="8" data-value="Ошибка 8">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="8"
+                                data-value="Ошибка 8">
                                 Не подходит мой номер телефона
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="9" data-value="Ошибка 9">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="9"
+                                data-value="Ошибка 9">
                                 Не хочу давать разрешения на доступ к устройству
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="10" data-value="Ошибка 10">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="10"
+                                data-value="Ошибка 10">
                                 Не могу удалить свой профиль из приложения
                             </div>
-                            <div class="select-input list-item" onclick="selectItem(this)"  data-key="11" data-value="Ошибка 11">
+                            <div class="select-input list-item" onclick="selectItem(this)" data-key="11"
+                                data-value="Ошибка 11">
                                 Другое
                             </div>
                         </div>
@@ -162,21 +167,22 @@
                     <div class="support-window">
                         <div class="group-user-message">
                             <div class="user-form-text">
-                                <textarea name="message" cols="30" rows='10' class="user-from-text-style" placeholder="Текст сообщения"></textarea>
+                                <textarea name="message" cols="30" rows='10' class="user-from-text-style"
+                                    placeholder="Текст сообщения"></textarea>
                             </div>
                             <div class="support-data">
-                                <input class="input-support-style" type="text" placeholder="Имя" color="#D5D5D5" >
-                                <input class="input-support-style" type="text" placeholder="E-mail *" color="#D5D5D5" >
+                                <input class="input-support-style" type="text" placeholder="Имя" color="#D5D5D5">
+                                <input class="input-support-style" type="text" placeholder="E-mail *" color="#D5D5D5">
                             </div>
                             <div class="button-mess">
                                 <a href="#" class="butt-border-message">
                                     <span class="butt-border-message-style">Отправить</span>
-                                </a>                                      
-                            </div> 
-                        </div>     
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                
+
             </div>
 
             <div class="conditiuns">
@@ -235,25 +241,25 @@
 
     </footer>
 
-</div> <!-- End App -->
+    </div> <!-- End App -->
 
-<script src="js/app.js"></script>
-<script src="/js/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/js/owlCarousel/owl.carousel.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/js/owlCarousel/owl.carousel.min.js"></script>
 
-<script>
-    $(document).ready(function () {
-        $("#slider_1").owlCarousel({
-            'items': 1,
-            'loop': true,
-            // 'autoplay': true,
-            // 'autoplayTimeout': 3000,
-            'autoplayHoverPause': true,
-            'nav': true,
+    <script>
+        $(document).ready(function () {
+            $("#slider_1").owlCarousel({
+                'items': 1,
+                'loop': true,
+                // 'autoplay': true,
+                // 'autoplayTimeout': 3000,
+                'autoplayHoverPause': true,
+                'nav': true,
+            });
         });
-    });
-</script>
+    </script>
 
 </body>
 
